modified server and direction views using hbs register helper to pass js object, wip

--- a/views/direction.hbs
+++ b/views/direction.hbs
@@ -8,7 +8,7 @@
 	<form method="get" action="/stops">
 		<select name="direction_selected">
 		{{#each directions}}
-			<option value="{{@index}}">{{this._attributes.title}}</option>
+			<option value="{{{json "direction_num" @index "direction_name" this._attributes.title}}}">{{this._attributes.title}}</option>
 		{{/each}}
 		</select>
 		<button type="Submit" name="submitDirection" value="submitDirection">Submit Direction</button> 
