revised show-next-stop view to show minutes to bus approach

--- a/views/stops.hbs
+++ b/views/stops.hbs
@@ -9,7 +9,7 @@
 	<form method="get" action="/show-next-stops">
 		<select name="stop_selected">
 		{{#each stopsList}}
-			<option value='{{this.json}}>{{this.name}}</option>
+			<option value='{{this.json}}'>{{this.name}}</option>
 		{{/each}}
 		</select>
 		<button type="Submit" name="submitStop" value="submitStop">Submit Stop</button> 
