added functions file for exporting modules

--- a/views/direction.hbs
+++ b/views/direction.hbs
@@ -11,7 +11,7 @@
 			<option value='{{this.json}}'>{{this.name}}</option>
 		{{/each}}
 		</select>
-		<button type="Submit" name="submitDirection" value="submitDirection">Submit Direction</button> 
+		<button type="Submit" name="submitDirection" value="Submit">Submit Direction</button> 
 	</form>
 </body>
 </html>
