--- a/views/show-next-stops.hbs
+++ b/views/show-next-stops.hbs
@@ -2,8 +2,9 @@
 <body>
 	<h1>Find Your Next Bus!</h1>
 	<p>Serving LA area, specifically LA Metro</p>
-	<h2>Your Route {{routeSelected}}</h2>
-	<h2>Your Stop {{stopSelected}}</h2>
+	<h2>Your Route: {{routeSelected}}</h2>
+	<h2>Your Direction: {{directionSelected}}</h2>
+	<h2>Your Stop: {{stopSelected}}</h2>
 	{{#each displayedTimes}}
 	<p>Minutes: {{this.minutes}}</p>
 	{{/each}}
