--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,6 +1,6 @@
 <html>
+{{>header}}
 <body>
-	<h1>Find Your Next Bus!</h1>
 	<p>Please select your route below</p>
 	<p>Serving LA area, specifically LA Metro</p>
 	<form method="get" action="/direction">
