--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -5,6 +5,7 @@
 <body>
 	<div class="container">
 	<h1>Find Your Next Bus!</h1>
+	<p>Serving LA area, specifically LA Metro</p>
 	</div>
 </body>
 </html>
