--- a/views/stops.hbs
+++ b/views/stops.hbs
@@ -1,8 +1,7 @@
 <html>
+{{>header}}
 <body>
-	<h1>Find Your Next Bus!</h1>
-	<p>Please select your route below</p>
-	<p>Serving LA area, specifically LA Metro</p>
+	<p>Please select your stop below</p>
 	<h2>Route: {{routeSelected}}</h2>
 	<h2>Direction: {{directionSelected}} </h2>
 	<h2>Stops</h2>
