--- a/views/show-next-stops.hbs
+++ b/views/show-next-stops.hbs
@@ -1,7 +1,6 @@
 <html>
+{{>header}}
 <body>
-	<h1>Find Your Next Bus!</h1>
-	<p>Serving LA area, specifically LA Metro</p>
 	<h2>Your Route: {{routeSelected}}</h2>
 	<h2>Your Direction: {{directionSelected}}</h2>
 	<h2>Your Stop: {{stopSelected}}</h2>
